<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WiFi IP切换器</string>
    <!-- 主界面 -->
    <string name="title_main">WiFi IP切换器</string>
    <string name="current_wifi">当前WiFi</string>
    <string name="current_ip">当前IP</string>
    <string name="current_wifi_status">当前WiFi状态</string>
    <string name="wifi_name">WiFi名称</string>
    <string name="no_connection">未连接</string>
    <string name="ip_not_available">--</string>
    <string name="add_profile">添加配置</string>
    <string name="saved_ip_profiles">已保存的IP配置</string>
    <string name="switch_ip">切换IP</string>
    <!-- 配置界面 -->
    <string name="profile_name">配置名称</string>
    <string name="ssid">WiFi名称(SSID)</string>
    <string name="use_dhcp">使用DHCP</string>
    <string name="static_ip_config">静态IP配置</string>
    <string name="ip_address">IP地址</string>
    <string name="subnet_mask">子网掩码</string>
    <string name="gateway">网关</string>
    <string name="dns1">首选DNS</string>
    <string name="dns2">备用DNS</string>
    <string name="save">保存</string>
    <string name="save_profile">保存配置</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <!-- 提示信息 -->
    <string name="switch_success">IP配置已切换</string>
    <string name="switch_failed">切换失败</string>
    <string name="profile_saved">配置已保存</string>
    <string name="profile_deleted">配置已删除</string>
    <string name="invalid_ip">无效的IP地址</string>
    <string name="invalid_gateway">无效的网关地址</string>
    <string name="permission_required">需要WiFi权限</string>
</resources>